--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <!-- Hero Section with Video Background -->
         <section id="home" class="hero">
             <div class="video-container">
-                <video autoplay muted loop id="hero-video">
-                    <source src="assets/hero-video.mp4" type="video/mp4">
+                <video autoplay muted loop playsinline preload="auto" id="hero-video">
+                    <source src="assets/out2.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 <div class="overlay"></div>
