flag resimleri halloldu

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         </nav>
         <div class="language-selector" style="z-index: 1000;">
             <button class="lang-btn" data-lang="tr">
-                <span class="flag-icon">🇹🇷</span>
+                <span class="flag-icon"><img src="assets/flags/tr.png" alt="TR"></span>
                 TR
             </button>
             <button class="lang-btn" data-lang="en">
-                <span class="flag-icon">🇬🇧</span>
+                <span class="flag-icon"><img src="assets/flags/en.png" alt="EN"></span>
                 EN
             </button>
             <button class="lang-btn" data-lang="ru">
-                <span class="flag-icon">🇷🇺</span>
+                <span class="flag-icon"><img src="assets/flags/ru.png" alt="RU"></span>
                 RU
             </button>
         </div>
